dft/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app-${ENV}
  namespace: dft
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app-${ENV}
  template:
    metadata:
      labels:
        app: nginx-app-${ENV}
    spec:
      containers:
      - name: nginx-app-${ENV}
        image: localhost:32000/dft:${ENV}
        ports:
        - containerPort: 80
        startupProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 5
          failureThreshold: 20
        volumeMounts:
        - name: www
          mountPath: /var/www/html
      volumes:
      - name: www
        hostPath:
          path: /mnt/data
