dft/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-${ENV}
  namespace: dft
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: nginx-app-${ENV}
