dft/nginx-combined.yaml
# NGINX APP - Combined Manifests
# https://github.com/davift/github-actions

# namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: dft
  labels:
    name: dft

---

# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app-${ENV}
  namespace: dft
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app-${ENV}
  template:
    metadata:
      labels:
        app: nginx-app-${ENV}
    spec:
      containers:
      - name: nginx-app-${ENV}
        image: localhost:32000/dft:${ENV}
        ports:
        - containerPort: 80
        startupProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 5
          failureThreshold: 20
        volumeMounts:
        - name: www
          mountPath: /var/www/html
      volumes:
      - name: www
        hostPath:
          path: /mnt/data

---

# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-${ENV}
  namespace: dft
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: nginx-app-${ENV}

---

# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-${ENV}
  namespace: dft
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  rules:
  - host: ${ENV}-nginx.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-${ENV}
            port:
              number: 80
